log
Fri May 13 07:30:22 -04 2022: 
 tests:  0|5
total_score: 0/70
6ff4706
Fri May 13 07:39:43 -04 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
./sudoku.c:54:38: error: incompatible pointer types returning 'Node *' from a function with result type 'List *' (aka 'struct List *') [-Werror,-Wincompatible-pointer-types]
            if (!is_valid(n)) return n;
                                     ^
./sudoku.c:53:11: error: unused variable 'list' [-Werror,-Wunused-variable]
    List* list=createList();
          ^
./sudoku.c:62:5: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
    }
    ^
./sudoku.c:63:5: error: expected identifier or '('
    return list;
    ^
./sudoku.c:64:1: error: extraneous closing brace ('}')
}
^
5 errors generated.
Compilation failed
2817780
Fri May 13 07:44:02 -04 2022: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|0
236da83
Fri May 13 07:48:50 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0734e14
Fri May 13 07:50:12 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c6596f6
Fri May 13 07:51:01 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
96bd372
Fri May 13 07:53:14 -04 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
66d0881
Fri May 13 07:53:40 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cecce4d
Fri May 13 07:56:04 -04 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
791ad62
Fri May 13 08:00:06 -04 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
97cc210
Fri May 13 08:00:38 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e1fed70
Fri May 13 08:02:06 -04 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bba742b
Fri May 13 08:02:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d48c836
Fri May 13 08:02:41 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a491396
Fri May 13 08:02:58 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
454c1d6
Fri May 13 08:03:16 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f087b63
Fri May 13 08:03:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
833c8ba
Fri May 13 08:03:44 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0b4a295
Fri May 13 08:04:04 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
453f541
Fri May 13 08:04:18 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
812e1af
Fri May 13 08:04:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
31f849e
Fri May 13 08:04:39 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2bdbcc3
Fri May 13 08:05:45 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5b49196
Fri May 13 08:05:59 -04 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5092c51
Fri May 13 08:06:33 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
3c3cedb
Fri May 13 08:07:06 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
bfdf08e
Fri May 13 08:07:53 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7045d5a
Fri May 13 08:08:43 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
27479e7
Fri May 13 08:09:06 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
19507d4
Fri May 13 08:12:45 -04 2022: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
ad4154f
Fri May 13 08:15:40 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
be90d8f
Fri May 13 08:18:25 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5e6e741
Fri May 13 08:22:00 -04 2022: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  3|4
total_score: 20/70
7cc7b79
Fri May 13 08:23:12 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
d238688
Fri May 13 08:25:02 -04 2022: 
 tests:  0|0
b2d1aaf
